--- a/package.json
+++ b/package.json
@@ -1,46 +1,26 @@
 {
-  "name": "pg",
-  "version": "6.1.5",
-  "description": "PostgreSQL client - pure javascript & libpq with the same API",
-  "keywords": [
-    "postgres",
-    "pg",
-    "libpq",
-    "postgre",
-    "database",
-    "rdbms"
-  ],
-  "homepage": "http://github.com/brianc/node-postgres",
+  "name": "whatever",
+  "version": "1.0.0",
+  "description": "[![Build Status](https://secure.travis-ci.org/brianc/node-postgres.svg?branch=master)](http://travis-ci.org/brianc/node-postgres) [![Dependency Status](https://david-dm.org/brianc/node-postgres.svg)](https://david-dm.org/brianc/node-postgres) <span class=\"badge-npmversion\"><a href=\"https://npmjs.org/package/pg\" title=\"View this project on NPM\"><img src=\"https://img.shields.io/npm/v/pg.svg\" alt=\"NPM version\" /></a></span> <span class=\"badge-npmdownloads\"><a href=\"https://npmjs.org/package/pg\" title=\"View this project on NPM\"><img src=\"https://img.shields.io/npm/dm/pg.svg\" alt=\"NPM downloads\" /></a></span>",
+  "main": "test_script.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "pg": "^6.1.5"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-postgres.git"
+    "url": "git+https://github.com/brianc/node-postgres.git"
   },
-  "author": "Brian Carlson <brian.m.carlson@gmail.com>",
-  "main": "./lib",
-  "dependencies": {
-    "buffer-writer": "1.0.1",
-    "packet-reader": "0.2.0",
-    "pg-connection-string": "0.1.3",
-    "pg-pool": "1.*",
-    "pg-types": "1.*",
-    "pgpass": "1.x",
-    "semver": "4.3.2"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brianc/node-postgres/issues"
   },
-  "devDependencies": {
-    "async": "0.9.0",
-    "co": "4.6.0",
-    "jshint": "2.5.2",
-    "lodash": "4.13.1",
-    "pg-copy-streams": "0.3.0",
-    "promise-polyfill": "5.2.1"
-  },
-  "minNativeVersion": "1.7.0",
-  "scripts": {
-    "changelog": "npm i github-changes && ./node_modules/.bin/github-changes -o brianc -r node-postgres -d pulls -a -v",
-    "test": "make test-all connectionString=postgres://postgres@localhost:5432/postgres"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": ">= 0.8.0"
-  }
+  "homepage": "https://github.com/brianc/node-postgres#readme"
 }
